--- a/public/css/style.css
+++ b/public/css/style.css
@@ -299,7 +299,7 @@ body {
 }
 
 .header {
-  background-color: #444;
+  background-color: #55c57a;
   padding: 0 5rem;
   height: 8rem;
   position: relative;
