--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,12 +3,14 @@
 }
 
 ::-moz-selection {
-  background-color: #55c57a;
+  background-color: #11998e;
+  /* background-image: linear-gradient(180deg, #11998e, #38ef7d); */
   color: #fff;
 }
 
 ::selection {
-  background-color: #55c57a;
+  background-color: #11998e;
+  /* background-image: linear-gradient(180deg, #11998e, #38ef7d); */
   color: #fff;
 }
 
@@ -114,14 +116,15 @@ body {
   font-size: 2.25rem;
   text-transform: uppercase;
   font-weight: 700;
-  background-image: -webkit-gradient(
+  /* background-image: -webkit-gradient(
     linear,
     left top,
     right top,
     from(#7dd56f),
     to(#28b487)
   );
-  background-image: linear-gradient(to right, #7dd56f, #28b487);
+  background-image: linear-gradient(to right, #7dd56f, #28b487); */
+  background-image: linear-gradient(180deg, #11998e, #38ef7d);
   -webkit-background-clip: text;
   color: transparent;
   letter-spacing: 0.1rem;
@@ -152,18 +155,19 @@ body {
   line-height: 1;
   -webkit-box-decoration-break: clone;
   box-decoration-break: clone;
-  background-image: -webkit-gradient(
+  /* background-image: -webkit-gradient(
     linear,
     left top,
     right bottom,
     from(rgba(125, 213, 111, 0.85)),
     to(rgba(40, 180, 135, 0.85))
-  );
-  background-image: linear-gradient(
+  ); */
+  /* background-image: linear-gradient(
     to bottom right,
     rgba(125, 213, 111, 0.85),
     rgba(40, 180, 135, 0.85)
-  );
+  ); */
+  background-image: linear-gradient(180deg, #11998e, #38ef7d);
 }
 
 .heading-primary {
@@ -231,7 +235,8 @@ body {
 }
 
 .btn--green {
-  background-color: #55c57a;
+  /* background-color: #55c57a; */
+  background-image: linear-gradient(180deg, #11998e, #38ef7d);
   color: #fff;
 }
 .btn--green::after {
@@ -299,7 +304,8 @@ body {
 }
 
 .header {
-  background-color: #55c57a;
+  /* background-color: #55c57a; */
+  background-image: linear-gradient(180deg, #11998e, #38ef7d);
   padding: 0 5rem;
   height: 8rem;
   position: relative;
@@ -368,14 +374,14 @@ body {
   position: absolute;
   width: 100%;
   height: 100%;
-  background-image: -webkit-gradient(
+  /* background-image: -webkit-gradient(
     linear,
     left top,
     right bottom,
     from(#7dd56f),
     to(#28b487)
   );
-  background-image: linear-gradient(to right bottom, #7dd56f, #28b487);
+  background-image: linear-gradient(to right bottom, #7dd56f, #28b487); */
   opacity: 0.85;
 }
 
@@ -388,6 +394,8 @@ body {
   transform: translate(-50%, -50%);
 }
 .heading-box__group {
+  /* color: linear-gradient(180deg, #11998e, #38ef7d); */
+  /* color: #38ef7d;  */
   color: #f7f7f7;
   margin-top: 3rem;
   display: -webkit-box;
@@ -577,14 +585,15 @@ body {
   padding: calc(5rem + var(--section-rotate)) 0;
   position: relative;
   z-index: 1000;
-  background: -webkit-gradient(
+  /* background: -webkit-gradient(
     linear,
     left top,
     right bottom,
     from(#7dd56f),
     to(#28b487)
   );
-  background: linear-gradient(to right bottom, #7dd56f, #28b487);
+  background: linear-gradient(to right bottom, #7dd56f, #28b487); */
+  background-image: linear-gradient(180deg, #11998e, #38ef7d);
   clip-path: polygon(
     0 var(--section-rotate),
     100% 0,
@@ -715,14 +724,15 @@ body {
   -webkit-box-pack: center;
   -ms-flex-pack: center;
   justify-content: center;
-  background: -webkit-gradient(
+  /* background: -webkit-gradient(
     linear,
     left top,
     right bottom,
     from(#7dd56f),
     to(#28b487)
   );
-  background: linear-gradient(to right bottom, #7dd56f, #28b487);
+  background: linear-gradient(to right bottom, #7dd56f, #28b487); */
+  background-image: linear-gradient(180deg, #11998e, #38ef7d);
   z-index: 10;
   -webkit-transform: translate(-35%, -50%);
   transform: translate(-35%, -50%);
@@ -772,14 +782,15 @@ body {
   -webkit-box-flex: 32rem;
   -ms-flex: 32rem 0 0px;
   flex: 32rem 0 0;
-  background-image: -webkit-gradient(
+  /* background-image: -webkit-gradient(
     linear,
     left top,
     right bottom,
     from(#7dd56f),
     to(#28b487)
   );
-  background-image: linear-gradient(to right bottom, #7dd56f, #28b487);
+  background-image: linear-gradient(to right bottom, #7dd56f, #28b487); */
+  background-image: linear-gradient(180deg, #11998e, #38ef7d);
   padding: 4rem 0;
 }
 .user-view__content {
@@ -1307,7 +1318,8 @@ body {
 }
 
 .form__upload + label {
-  color: #55c57a;
+  /* color: #55c57a; */
+  color: #11998e;
   display: inline-block;
   text-decoration: none;
   border-bottom: 1px solid #55c57a;
