--- a/views/forgotPassword.pug
+++ b/views/forgotPassword.pug
@@ -3,10 +3,10 @@ extends base
 block content
   main.main
     .forgotpassword-form
-      h2.heading-secondary.ma-bt-lg Enter your email address
+      h2.heading-secondary.ma-bt-lg.login---label Enter your email address
       form.form.form--forgotpassword
         .form__group
           label.form__label(for='emailForgotPassword') Email address
           input#emailForgotPassword.form__input(type='email', placeholder='you@example.com', required)
         .form__group
-          button.btn.btn--green.btn-forgot-password Submit
+          button.btn.btn--green.btn-forgot-password.btn--login Submit
