Fixed welcome email template 📧

--- a/views/email/welcome.pug
+++ b/views/email/welcome.pug
@@ -12,6 +12,6 @@ block content
               tbody
                 tr
                   td
-                    a(href=`${url}`, target='_blank') Upload user photo
+                    a(href=`https://natours-international.herokuapp.com/me`, target='_blank') Upload user photo
     p If you need any help with booking your next tour, please don't hesitate to contact me!
     p - Nachiketa Dhal
