--- a/views/resetpassword.pug
+++ b/views/resetpassword.pug
@@ -3,7 +3,7 @@ extends base
 block content
   main.main
     .resetpassword-form
-      h2.heading-secondary.ma-bt-lg Reset your password
+      h2.heading-secondary.ma-bt-lg.login---label Reset your password
       form.form.form--resetpassword
         .form__group.ma-bt-md
           label.form__label(for='passwordResetPassword') Password
@@ -12,4 +12,4 @@ block content
           input#passwordConfirmResetPassword.form__input(type='password', placeholder='••••••••', required, minlength='8')
           input#resetToken(type='hidden' value=`${resetToken}`)
         .form__group
-          button.btn.btn--green.btn--reset Reset
+          button.btn.btn--green.btn--reset.btn--login Reset
