Fixed email templates 📧

--- a/views/email/passwordReset.pug
+++ b/views/email/passwordReset.pug
@@ -14,4 +14,4 @@ block content
                   td
                     a(href=`${url}`, target='_blank') Reset your password
 
-  p If you need any help with booking your next tour, please don't hesitate to contact me!
+  p If you need any help with booking your next tour, please don't hesitate to contact us!
