--- a/views/email/welcome.pug
+++ b/views/email/welcome.pug
@@ -14,4 +14,4 @@ block content
                   td
                     a(href=`https://natours-international.herokuapp.com/me`, target='_blank') Upload user photo
     p If you need any help with booking your next tour, please don't hesitate to contact me!
-    p - Nachiketa Dhal
+    p - Minh Tran
