--- a/views/email/welcome.pug
+++ b/views/email/welcome.pug
@@ -13,5 +13,5 @@ block content
                 tr
                   td
                     a(href=`https://natours-international.herokuapp.com/me`, target='_blank') Upload user photo
-    p If you need any help with booking your next tour, please don't hesitate to contact me!
+    p If you need any help with booking your next tour, please don't hesitate to contact us!
     p - Minh Tran
